# kobito_agent

./: .gitignore  CLAUDE.md  pyproject.toml  run.py  start.bat  team.md
agent/adam/: CLAUDE.md  config.yaml  mission.md  task.md
docs/: mockup_phase1.html  mockup_phase2.html  spec_chat.md  spec_list.md  spec_runner.md  spec_settings.md  spec_trigger.md  spec_web.md
project/agent_manager/: mcp_call_agent.py  pyproject.toml  run.py
project/agent_manager/docs/: mockup_phase3.html  spec_chat.md  spec_config.md  spec_inter_agent_communication.md  spec_memory.md  spec_runner.md  spec_settings.md  spec_task_think.md  spec_web.md  spec_x-x_specname_template.md
project/agent_manager/scripts/: check_new_messages.py  load_session_context.py  sync_chat.py
project/agent_manager/server/: app.py  chat.py  config.py  inter_agent_session.py  runner.py  trigger.py
project/agent_manager/server/routes/: agents.py  chat.py  deps.py  files.py  inter_agent.py  think.py  triggers.py
project/agent_manager/server/static/: index.html
project/agent_manager/server/static/css/: style.css
project/agent_manager/server/static/js/: api.js  app.js  chat.js  settings.js  think-tab.js  think.js
project/agent_manager/tests/: conftest.py  test_chat.py  test_config.py  test_inter_agent_session.py  test_mcp_call_agent.py  test_runner.py  test_settings.py  test_sync_chat.py  test_task_think.py  test_think.py  test_think_api.py  test_trigger.py  test_web.py
server/: app.py  chat.py  config.py  runner.py
tests/: conftest.py  test_chat.py  test_config.py  test_runner.py  test_web.py
(+59 files in other folders)
